<resources>
    <string name="app_name">مسلم</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">القراءن الكريم</string>
    <string name="nav_header_desc">القراءن الكريم</string>
    <string name="action_settings">Settings</string>


    <string name="sora">سورة</string>
    <string name="jozz">جزء</string>
    <string name="page">صفحة</string>
    <string name="aya_num">ايه رقم: </string>
    <string name="Quran">القراءن الكريم</string>
    <string name="Quran_search">بحث في القراءن</string>
    <string name="menu_azkar">اذكار</string>
    <string name="menu_doaa">ادعية</string>
    <string name="Quran_mp3">سماع</string>
    <string name="Azkar">اذكار المسلم</string>
    <string name="quran_mp3">القراءن الكريم صوت</string>
    <string name="tasbih">تسبيح</string>
    <string name="muslim">مسلم</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="links">روابط خير</string>
    <string name="info">معلومات عن التطبيق</string>
    <string name="aboutApp">عن التطبيق </string>
    <string name="AboutApp">عن التطبيق :</string>
    <string name="howRetchMe">كيفيه التواصل :</string>

    <string name="InfoApp">تطبيق مجاني وغير ربحي يحتوي علي اغلب ما يحتاجه المسلم من القراءن والاذكار والادعيه الخ..</string>
    <string name="aboutDeveloper">تم التطوير والتصميم بواسطه عبدالرحمن سعد برجاء الدعاء</string>
    <string name="InfoDev">عن المطور :</string>
</resources>